2007-07-31 Ladislav Hagara <hgr@vabo.cz>
	* DETAILS: 2.0.0.6, SECURITY_PATCH=10
	  http://www.mozilla.org/projects/security/known-vulnerabilities.html#firefox2.0.0.6
	* firefox-config.patch: updated to 2.0.0.6

2007-07-18 Ladislav Hagara <hgr@vabo.cz>
	* DETAILS: 2.0.0.5, SECURITY_PATCH=9
	  http://www.mozilla.org/projects/security/known-vulnerabilities.html#firefox2.0.0.5
	* firefox-config.patch: updated to 2.0.0.5

2007-06-06 David Kowis <dkowis@shlrm.org>
	* PRE_BUILD, DEPENDS, visibility.patch: Don't need the visibility patch anymore for 
	  amd64 (probaby ppc)

2007-05-31 Ladislav Hagara <hgr@vabo.cz>
	* DETAILS: 2.0.0.4, SECURITY_PATCH=8
	  http://www.mozilla.org/projects/security/known-vulnerabilities.html#firefox2.0.0.4
	* firefox-config.patch: updated to 2.0.0.4

2007-04-25 Thomas Orgis <sobukus@sourcemage.org>
	* PRE_BUILD, DEPENDS: apply the visibility patch for ppc, too, as
	  build fails strangely without (bogus unresolved syms in xpcom/obsolete)

2007-03-20 George Sherwood <george@beernabeer.com>
	* DETAILS: Updated to version 2.0.0.3
	* BUILD: Small cleanup of FIREFOX_HOME variable.
	* INSTALL: Updated sed to using $VERSION vice hardcoded version
	* firefox-config.patch: Updated for version 2.0.0.3.

2007-03-03 George Sherwood <george@beernabeer.com>
	* INSTALL: Added sedit to fix firefox-plugin.pc for nspr. Bug #13581

2007-02-25 George Sherwood <george@beernabeer.com>
	* INSTALL: Added patch for firefox-config to match how we install.
	* firefox-config.patch: Added patch to get paths correct.

2007-02-24 George Sherwood <george@beernabeer.com>
	* INSTALL: change fix for *.pc files from 2.0.0.1 to 2.0.0.2

2007-02-24 Ladislav Hagara <hgr@vabo.cz>
	* DETAILS: SECURITY_PATCH=7
	  http://www.mozilla.org/projects/security/known-vulnerabilities.html#firefox2.0.0.2

2007-02-23 Ladislav Hagara <hgr@vabo.cz>
	* DETAILS: 2.0.0.2

2007-02-16 Eric Sandall <sandalle@sourcemage.org>
	* BUILD: Disable -ffast-math in flags as it breaks plugins