@@ -5,17 +5,18 @@ if  [  "$FIREFOX_CVS"  ==  "y"  ];  then
    SOURCE_URL[0]=cvs://:pserver:anonymous@cvs-mirror.mozilla.org:/cvsroot:mozilla/client.mk
    SOURCE_IGNORE=volatile
 else
-         VERSION=2.0.0.6
+         VERSION=2.0.0.7
           SOURCE=$SPELL-$VERSION-source.tar.bz2
          SOURCE2=${SOURCE}.asc
-      SOURCE_GPG="firefox.gpg:${SOURCE2}:UPSTREAM_KEY"
-  SOURCE2_IGNORE=signature
+#     SOURCE_GPG="firefox.gpg:${SOURCE2}:UPSTREAM_KEY"
+# SOURCE2_IGNORE=signature
+     SOURCE_HASH=sha512:012f40b916556edab115b28ec50b5be9b4af1196bdd1449e4da2f1de5be9fb44aaa55e848e3ec326478af67bea6671f3385501591ba484375e3af2c88af1f9ba 
    SOURCE_URL[0]=ftp://ftp.mozilla.org/pub/mozilla.org/$SPELL/releases/$VERSION/source/$SOURCE
    SOURCE_URL[1]=ftp://ftp.access.ch/mirror/mozilla/$SPELL/releases/$VERSION/source/$SOURCE
    SOURCE_URL[2]=ftp://ftp.in2p3.fr/pub/mozilla/$SPELL/releases/$VERSION/source/$SOURCE
    SOURCE_URL[3]=ftp://ftp.sai.msu.su/pub/unix/WWW/browsers/$SOURCE
-  SOURCE2_URL[0]=${SOURCE_URL}.asc
-  SECURITY_PATCH=10
+# SOURCE2_URL[0]=${SOURCE_URL}.asc
+  SECURITY_PATCH=11
 fi
 SOURCE_DIRECTORY=$BUILD_DIRECTORY/mozilla
         WEB_SITE=http://www.mozilla.org/projects/firefox/
