@@ -25,7 +25,7 @@ FIREFOX_TARBALL=firefox-1.0+.tar.bz2  &&
   message  "Moving $FIREFOX_TARBALL to/var/spool/sorcery${DEFAULT_COLOR}"   &&
   mv  -v  $FIREFOX_TARBALL  $SOURCE_CACHE/
 else
-  default_pre_build
+  default_pre_build  &&
   cd  $SOURCE_DIRECTORY    &&
   patch -p0 < $SCRIPT_DIRECTORY/x-lib.patch
 fi &&
