@@ -14,8 +14,8 @@
        exit 0
        ;;
      --cflags)
--      if test "/usr/local/include/firefox-2.0.0.6" != /usr/include ; then
--        includes="-I/usr/local/include/firefox-2.0.0.6"
+-      if test "/usr/local/include/firefox-2.0.0.7" != /usr/include ; then
+-        includes="-I/usr/local/include/firefox-2.0.0.7"
 +      if test "/usr/include/firefox" != /usr/include ; then
 +        includes="-I/usr/include/firefox"
        fi
@@ -25,14 +25,14 @@
  if test "$echo_cflags" = "yes"; then
      nspr_cflags="-I/usr/include/nspr"
      for n in $echo_components; do
--	component_includes="$component_includes -I/usr/local/include/firefox-2.0.0.6/$n"
+-	component_includes="$component_includes -I/usr/local/include/firefox-2.0.0.7/$n"
 +	component_includes="$component_includes -I/usr/include/firefox/$n"
      done
      echo $component_includes $includes $nspr_cflags
  fi
  
  if test "$echo_idlflags" = "yes"; then
--    echo "-I/usr/local/share/idl/firefox-2.0.0.6"
+-    echo "-I/usr/local/share/idl/firefox-2.0.0.7"
 +    echo "-I/usr/share/idl/firefox"
  fi
  
@@ -41,6 +41,6 @@
  	    ;;
          esac
      done
--    echo -L/usr/local/lib/firefox-2.0.0.6 $libs
+-    echo -L/usr/local/lib/firefox-2.0.0.7 $libs
 +    echo -L/usr/lib $libs
  fi
