@@ -1,3 +1,10 @@
+2007-09-19 George Sherwood <george@beernabeer.com>
+	* DETAILS: Updated to 2.0.0.7, SECURITY_PATCH=11
+	  http://www.mozilla.org/projects/security/known-vulnerabilities.html#firefox2.0.0.7
+	  New sig not part of firefox.gpg
+	* PRE_BUILD: Added && after default_pre_build
+	* firefox-config.patch: updated to 2.0.0.7
+
 2007-07-31 Ladislav Hagara <hgr@vabo.cz>
 	* DETAILS: 2.0.0.6, SECURITY_PATCH=10
 	  http://www.mozilla.org/projects/security/known-vulnerabilities.html#firefox2.0.0.6
